--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section class="sec">
     <div class="container">
         <div class="main">
-            <img class="main__logo" src="/img/main.png" alt="">
+            <img class="main__logo" src="img/main.png" alt="">
             <div class="main__title">PaymentOS for DAOs</div>
             <div class="main__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
             <button class="btn first">Open app</button>
